Mon Feb  7 16:05:17 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (ruby_vm_send_signal): rb_intervm_wormhole_send() was
	  not a right way to push a signal because that function needs to
	  type-convert its argument i.e. needs a VM context.  As
	  ruby_vm_send_signal() is out of a VM, we cannnot do so.

	* intervm.h (rb_intervm_wormhole_send_immediate): New function to
	  be used in above situation.

	* intervm.h (rb_intervm_wormhole_send_immediate): ditto.

	* intervm.c (rb_intervm_wormhole_send): bug fix to fit to doxygen.

Sun Feb  6 12:22:19 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/webrick/mvm.rb (WEBrick::start): This "-d" was the unnecessary.

Sun Feb  6 12:19:20 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/webrick/mvm.rb (WEBrick::start): Just to edit debug message

Sun Feb  6 12:17:14 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/drb/mvm.rb : indent.

Sun Feb  6 11:48:01 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* lib/webrick/mvm.rb: New file.  This makes WEBrick to run parallel.

	* sample/webrick/mvm.rb: Sample webrick application for it.

Sun Feb  6 11:25:36 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/socket/rubysocket.h (FMODE_NOREVLOOKUP): was an int, not a Fixnum.

Sun Feb  6 00:12:34 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/digest/digest.c (InitVM_digest): MVM ready.

	* ext/digest/bubblebabble/bubblebabble.c (InitVM_bubblebabble): ditto.

	* ext/digest/md5/md5init.c (InitVM_md5): ditto.

	* ext/digest/rmd160/rmd160init.c (InitVM_rmd160): ditto.

	* ext/digest/sha1/sha1init.c (InitVM_sha1): ditto

	* ext/digest/sha2/sha2init.c (InitVM_sha2): ditto

Sat Feb  5 23:54:58 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* ext/strscan/strscan.c (InitVM_strscan): MVM ready.

Sat Feb  5 23:36:58 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* enc/trans/transdb.c (InitVM_transdb): MVM ready.

Sat Feb  5 23:32:54 2011  URABE Shyouhei  <shyouhei@ruby-lang.org>
